# strsplit

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish-testpypi.yml  publish_pypi.yml  publish_testpypi.yml  test.yml
.hooks/: check_versions_match.py
docs/source/: conf.py  index.rst  modules.rst  strsplitter.rst
src/strsplit/: __init__.py  __main__.py  iterator.py  splitter.py  strsplit.py
src/strsplitter/: __init__.py  __main__.py  splitter.py
tests/: test_split.py
