[project]
name = "strsplit"
version = "0.1.0"
description = "A string splitting utility with customizable splitters and filtering."
authors = [{ name = "Kessoum Khaled", email = "khaled.kessoum@univ-bejaia.dz" }]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["string", "split", "utility", "filtering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["click>=8.2.1"]

[project.urls]
Homepage = "https://github.com/ckalandk/strsplit"
Issues = "https://github.com/pypa/strsplit/issues"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["strsplit"]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]

[project.scripts]
strsplit-cli = "strsplit.__main__:main"

[[tool.uv.index]]
name = "strsplit"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
